# Chinese_English-Flash-Cards

./: .env.example  .gitignore  README.md  requirements.txt
.github/workflows/: release-desktop.yml
backend/: pyproject.toml  pytest.ini
backend/app/: config.py  crud.py  datasets.py  db.py  main.py  migrations.py  models.py  scheduler.py  schemas.py  security.py  srs.py
backend/app/api/: __init__.py  admin.py  auth.py  cards.py  collections.py  datasets.py  dict.py  importer.py  routes.py  study.py  utils.py
backend/app/services/: ai.py  import_jobs.py  importer.py  srs.py
backend/data/: flashcards.db-shm
backend/tests/: test_api.py  test_datasets.py  test_dict.py  test_srs.py
data/packs/: README.md
desktop/: main.js  package.json  preload.js
docs/: api-spec.md  architecture.md  data-sources.md  packaging.md  upgrade-notes.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: study.spec.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Flashcard.tsx  NavBar.tsx  ProgressBar.tsx  StatCard.tsx  StudyCard.tsx
frontend/src/hooks/: useAuth.ts  useOfflineSync.ts  useSRS.ts
frontend/src/pages/: Account.tsx  Auth.tsx  CardEditor.tsx  Collections.tsx  Home.tsx  Import.tsx  Study.tsx  pageTypes.ts
frontend/src/state/: flashcards.tsx
mobile/: App.tsx  README.md  app.json  package.json
scripts/: import_dict.py  prepare_offline_bundle.py  test_import.py
(+11 files in other folders)
